--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
    </head>
    <body>
       <nav>
-         <div class="nav-wrapper z-depth-3 red lighten-2 col s12 m6 l6 hide-on-med-and-down">
+         <div class="nav-wrapper z-depth-3 red lighten-2 col s12 m12 l12 hide-on-med-and-down">
             <a href="index.html" class="brand-logo logo-font left" style="color: black;">Stylecast</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="#modal1">LOGIN</a></li>
@@ -81,7 +81,7 @@
     </div>
 
     <div class="row">
-        <div class="col m12 s12 center">
+        <div class="col m12 s12 l12 center">
             <a href="#">
                 <div class="logo-font"></div>
             </a>
@@ -96,9 +96,9 @@
     <div class="container center">
         <img id="bunGirl" width="90" src="assets/images/bun1.png">
     </div>
-    <div class="container center" style="width: 500px;">
+    <div class="container center" style="max-width: 500px;">
         <div class="row">
-            <div class="col s10 m12">
+            <div class="col s12 m12 l12">
                <div id="index-card" class="card teal teal lighten-2">
                   <div class="card-content">
                      <p>The app that gives you all the information you need to keep your hair looking great no matter what the weather has in store.</p>
